fix(side-menu): z-index (#185)
* fix(side-menu): updated z-index to only take affect on smaller screens

* Update core/src/components/side-menu/side-menu.scss

* fix(side menu): corrected logic for z-index

* fix(side menu): removed manual toggle of collapse

--- a/core/src/components/side-menu/side-menu.scss
+++ b/core/src/components/side-menu/side-menu.scss
@@ -4,11 +4,6 @@
 @import '../../mixins/z-index';
 @import '../../global/variables';
 
-:host([open]) {
-  pointer-events: auto;
-  z-index: tds-z-index(header) + 1;
-}
-
 :host {
   pointer-events: none;
   display: block;
@@ -66,6 +61,13 @@
       border-top: none;
       border-bottom: 1px solid var(--tds-sidebar-side-menu-bottom-menu-border-top);
     }
+  }
+}
+
+@media (max-width: $grid-lg) {
+  :host([open]) {
+    pointer-events: auto;
+    z-index: tds-z-index(header) + 1;
   }
 }
 
